# 2025_NTU_ML

./: .gitignore  README.md
HW1/: .gitignore  README.md  mlhw1.ipynb
HW1/result/: README.md  simonchu.txt
HW2/: .gitignore  Dockerfile  ML2025Spring_hw2_public.ipynb  README.md  best_solution.py  good_solution_0.py  good_solution_1.py  good_solution_2.py  good_solution_3.py  good_solution_4.py  pyproject.toml  requirements.txt  submission.csv
HW2/env_template/.devcontainer/: devcontainer.json
HW3/: ML_HW3_understanding_LLM_transformers.ipynb  README.md  pyproject.toml  template_env
HW3/devcontainer_template/: devcontainer.json
HW4/: .gitignore  ML2025_Spring_HW4.ipynb  README.md  ground_truth.txt  pdr_score.py  pyproject.toml  reconstructed_results.txt
HW4/devcontainer_template/: devcontainer.json
HW5/: .gitignore  Dockerfile  Homework5_Finetuning_is_Powerful.ipynb  README.md  evaluate.py  evaluation_results.json  pred.json  pyproject.toml  requirements.txt  requirements_no_deps.txt
HW5/devcontainer_template/: devcontainer.json
HW5/hw5.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
HW5/outputs/: README.md
HW5/outputs/checkpoint-39/: README.md  adapter_config.json  chat_template.jinja  rng_state.pth  scheduler.pt
HW6/: .gitignore  Dockerfile  README.md  SimonChu.txt  ml2025hw6.ipynb  pyproject.toml
HW6/devcontainer_template/: devcontainer.json
